Updated Maven configuration to include TestFX